--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,13 @@
     "action": {
       "default_popup": "hello.html",
       "default_icon": "hello_extensions.png"
+    },
+
+    "permissions":[
+      "sidePanel"
+    ],
+
+    "side_panel":{
+      "default_path": "sidepanel.html"
     }
   }
