--- a/manifest.json
+++ b/manifest.json
@@ -3,16 +3,30 @@
     "name": "Hello Extensions",
     "description": "Base Level Extension",
     "version": "1.0",
+
     "action": {
       "default_popup": "hello.html",
       "default_icon": "hello_extensions.png"
     },
 
     "permissions":[
-      "sidePanel"
+      "sidePanel",
+      "tabs"
     ],
+
+    "background": {
+      "service_worker": "service-worker.js"
+    },
 
     "side_panel":{
       "default_path": "sidepanel.html"
+    },
+
+    "commands":{
+      "_execute_action":{
+        "suggested_key":{
+          "default": "Ctrl+B"
+        }
+      }
     }
   }
