added script loader to manifest

--- a/manifest.json
+++ b/manifest.json
@@ -28,5 +28,16 @@
           "default": "Ctrl+B"
         }
       }
-    }
-  }
+    },
+
+    "content_scripts": [
+        {
+            "js": ["scripts/content.js"],
+            "matches": [
+                "http://*/*",
+                "https://*/*"
+            ]
+        }
+    ]
+
+}
