--- a/manifest.json
+++ b/manifest.json
@@ -1,43 +1,31 @@
 {
-    "manifest_version": 3,
-    "name": "Hello Extensions",
-    "description": "Base Level Extension",
-    "version": "1.0",
-
-    "action": {
-      "default_popup": "hello.html",
-      "default_icon": "hello_extensions.png"
-    },
-
-    "permissions":[
-      "sidePanel",
-      "tabs"
-    ],
-
-    "background": {
-      "service_worker": "service-worker.js"
-    },
-
-    "side_panel":{
-      "default_path": "sidepanel.html"
-    },
-
-    "commands":{
-      "_execute_action":{
-        "suggested_key":{
-          "default": "Ctrl+B"
-        }
-      }
-    },
-
-    "content_scripts": [
-        {
-            "js": ["scripts/content.js"],
-            "matches": [
-                "http://*/*",
-                "https://*/*"
-            ]
-        }
-    ]
-
+  "manifest_version": 3,
+  "name": "Hello Extensions",
+  "description": "Base Level Extension",
+  "version": "1.0",
+  "action": {
+    "default_title": "Click to open panel",
+    "default_icon": "hello_extensions.png"
+  },
+  "permissions": [
+    "sidePanel",
+    "tabs"
+  ],
+  "background": {
+    "service_worker": "service-worker.js"
+  },
+  "side_panel": {
+    "default_path": "sidepanel.html"
+  },
+  "content_scripts": [
+    {
+      "js": [
+        "scripts/content.js"
+      ],
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ]
+    }
+  ]
 }
