function for idn attacker check

--- a/manifest.json
+++ b/manifest.json
@@ -14,5 +14,9 @@
   "permissions": [
     "sidePanel",
     "tabs"
+  ],
+  "web_accessible_resources": [
+    "src/homographs.json",
+    "src/common_domains.txt"
   ]
 }
