added page load listener

--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,9 @@
     "default_icon": "hello_extensions.png"
   },
   "permissions": [
+    "activeTab",
+    "scripting",
+    "webNavigation",
     "sidePanel",
     "tabs"
   ]
