--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Base Level Extension",
   "version": "1.0",
   "background": {
-    "service_worker": "src/service-worker.js",
+    "service-worker": "src/service-worker.js",
     "type": "module"
   },
   "action": {
