--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "type": "module"
   },
   "action": {
-    "default_title": "Click to open panel",
+    "default_popup": "hello.html",
     "default_icon": "hello_extensions.png"
   },
   "permissions": [
