--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Hello Extensions",
-  "description": "Base Level Extension",
-  "version": "1.0",
+  "name": "CarpySafe",
+  "description": "IDN Spoofing Attack Defender",
+  "version": "0.0.1",
   "background": {
     "service_worker": "src/service-worker.js",
     "type": "module"
